Actualización de archivos: admin.js, buscarUsuarios.js, index.js, .env, admin.html, styles.css

--- a/client/admin.html
+++ b/client/admin.html
@@ -18,9 +18,9 @@
         <input type="date" id="fecha">
         
         <label for="hora">Hora:</label>
-        <input type="time" id="hora">
+        <select id="hora" class="horaSelect" disabled></select>
 
-        <button id="enviarBtn">Aceptar</button>
+        <button id="enviarBtn" style="margin-top: 7px; font-size: 15px; padding: 3px;">Aceptar</button>
     </div>
     <div class="containerAdmin">
         <div class="card">
